--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
 
         <header>Your Weather Dashboard</header>
-        
+
         <!-- Navigation (search box and 5 previous searches) -->
         <nav>
             <!-- City Search Box and Submit Button -->
@@ -36,6 +36,8 @@
             <!-- unordered list for emoji, temp, wind, hum -->
             <ul> </ul>
         </div>
+
+        <footer> Made with love and tears by 💙dianaiulia💙 <a href="https://github"</footer>
 
         <script src="./assets/script.js"></script>
     </body>
