--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul> </ul>
         </div>
 
-        <footer> Made with love and tears by 💙dianaiulia💙 <a href="https://github"</footer>
+        <footer> Made with love and tears by 💙dianaiulia💙 also,<a href="https://github.com/dianaiuliacalin"> here's my github </a></footer>
 
         <script src="./assets/script.js"></script>
     </body>
