adding custom css styling and putting footer back in because i figured out how to make it not ugly

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <form>
                     <label for="searchedCity">Where ya goin?</label>
                     <input type="text" id="searchedCity" name="searchedCity" placeholder="city">
-                    <input type="submit" class="btn btn-outline-info" onclick="geoData()" value="get weather">
+                    <input type="submit" class="btn btn-outline-info custom-fill" onclick="geoData()" value="get weather">
                 </form>
                 <br>
                 <!-- empty div for search history -->
@@ -49,7 +49,7 @@
 
         </div>
 
-        <!-- <footer> Made with love and tears by <a href="https://github.com/dianaiuliacalin"> 💙dianaiulia💙 </a></footer> -->
+        <footer> Made with love and tears by <a href="https://github.com/dianaiuliacalin"> 💙dianaiulia💙 </a></footer>
 
         <script src="./assets/script.js"></script>
         <script src="https://momentjs.com/downloads/moment.js"></script>
