building form submit, fx to get icon, and from anthony's demo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <form id="searchedCityEl">
                     <label for="searchedCity">Where ya goin?</label>
                     <input type="text" id="searchedCity" name="searchedCity" placeholder="city">
-                    <input type="submit" id="searchButton" class="btn btn-outline-info" onclick="getWeather()" value="get weather">
+                    <input type="submit" id="searchButton" class="btn btn-outline-info" value="get weather">
                 </form>
                 <br>
                 <!-- empty div for search history -->
