--- a/index.html
+++ b/index.html
@@ -21,37 +21,37 @@
 
         <div class="container">
             <!-- Navigation (search box and 5 previous searches) -->
-            <nav class="nav col-3">
+            <nav class="nav col-2">
                 <!-- City Search Box and Submit Button -->
                 <form id="searchedCityEl">
                     <label for="searchedCity">Where ya goin?</label>
                     <input type="text" id="searchedCity" name="searchedCity" placeholder="city">
-                    <input type="submit" id="searchButton" class="btn btn-outline-info" value="get weather">
+                    <input type="submit" id="searchButton" class="btn btn-outline-info" onClick="formSubmit(event)" value="get weather">
                 </form>
                 <br>
                 <!-- empty div for search history -->
-                <div id="searchHistory" class="nav flex-column"> </div>
+                <div id="searchHistory" class="nav"> </div>
             </nav>
             
-            <main class="col-9">
+            <main class="col-10 container">
                 <!-- Current weather div -->
-                <div id="currentWeather">
+                <div id="currentWeather" class="row">
                     <!-- unordered list for temp, wind, hum, UV -->
-                    <ul> </ul>
                 </div>
 
                 <!-- 5 day forecast div -->
-                <div id="fiveDayWeather"> 
+                <div id="fiveDayWeather" class="container row"> 
                     <!-- unordered list for emoji, temp, wind, hum -->
-                    <ul> </ul>
+                   
                 </div>
             </main>
 
         </div>
 
-        <footer> Made with love and tears by <a href="https://github.com/dianaiuliacalin"> 💙dianaiulia💙 </a></footer>
+        <footer> Made with love and tears by <a href="https://github.com/diana-iulia"> 💙dianaiulia💙 </a></footer>
 
+        <!-- <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <script src="./assets/script.js"></script>
-        <script src="https://momentjs.com/downloads/moment.js"></script>
     </body>
 </html>
